[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/Snake/snake_head.png" type="Texture" id=1]
[ext_resource path="res://Player/head.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/ConsumableSounds/Speedup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="head" type="Area2D" groups=["Player"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="HeadSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpeedupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="SpeeddownSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="MagnetSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_head_area_entered"]
